# attention_forge

./: .gitignore  Makefile  README.md  api_key_loader.py  attention_forge_context.yaml  attention_forge_context_config.yaml  attention_forge_project.yaml  chat_logger.py  config.py  config_loader.py  context_config.yaml  context_loader.py  file_manager.py  main.py  openai_client.py  project_config.yaml  pyproject.toml  requirements.txt  response_parser.py  role_config.yaml  setup.py  user_input_handler.py
attention_forge/: api_key_loader.py  chain.py  chat.py  chat_logger.py  config_loader.py  context_loader.py  file_checker.py  file_manager.py  main.py  message_constructor.py  response_parser.py  role.py  setup_tool.py  user_input_handler.py
attention_forge/api-keys/: example-key.yaml  ollama-key.yaml
attention_forge/chain_configs/: boost.yaml  chat.yaml  general_dev.yaml  revert.yaml
attention_forge/chain_steps/: chat.py  chat_builder.py  chat_logger.py  context_loader_step.py  context_loader_step_test.py  dictionary_rewriter.py  file_reverter.py  file_updater.py  file_updater_test.py  step.py  user_input_handler.py
attention_forge/clients/: base_client.py  deepseek_client.py  fireworks_client.py  message_constructor.py  ollama_client.py  openai_client.py  rbx_client.py
attention_forge/role_configs/: assistant.yaml  booster.yaml  cyber_friend.yaml  dev_assistant.yaml  developer.yaml  file_update_recognizer.yaml  meta.yaml
attention_forge/setup_tools/: api_key_creator.py  base_plugin.py  model_checker.py  (+1 more)
role_configs/: assistant.yaml  dev_assistant.yaml
(+3 files in other folders)
